--- a/src/_variable.scss
+++ b/src/_variable.scss
@@ -2,10 +2,11 @@
 
 $board-bg-color: rgb(117, 226, 255);
 $appbar-bg-color: rgb(41, 166, 250);
-$card-bg-color: rgb(196, 255, 247);
+$card-bg-color: rgb(222, 247, 243);
 $card-bg-item: rgb(255, 255, 255);
 
 $text-color-main: #333;
+$danger-color: #ee5234;
 
 $gap: 10px;
 $column-border-radius: 8px;
