edit table column

--- a/src/_variable.scss
+++ b/src/_variable.scss
@@ -4,7 +4,7 @@ $board-bg-color: rgb(117, 226, 255);
 $appbar-bg-color: rgb(41, 166, 250);
 $card-bg-color: rgb(222, 247, 243);
 $card-bg-item: rgb(255, 255, 255);
-
+$border-color:rgb(222, 247, 243);
 $text-color-main: #333;
 $danger-color: #ee5234;
 
