--- a/src/components/Column/column.scss
+++ b/src/components/Column/column.scss
@@ -13,15 +13,49 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
       color: $text-color-main;
       padding: 0 8px;
    }
-   header {
-      padding-left: 15px;
+   header.column-drag-handle {
+      padding: 5px 8px;
       height: $column-header-height;
       line-height: $column-header-height;
-      font-size: 16px;
-      font-weight: 500;
-      cursor: pointer;
       border-top-left-radius: $column-border-radius;
       border-top-right-radius: $column-border-radius;
+      display: flex;
+      
+      .column-title{
+         font-size: 18px;
+         font-weight: 600;
+         height: 32px;
+         cursor: pointer;
+         overflow: hidden;
+         flex: 95%;
+      }
+
+      .column-dropdown{
+         flex:3%;
+         
+         button.dropdown-btn{
+            padding: 0 20px;
+            font-size: 20px;
+            letter-spacing: 2px;
+            background: $card-bg-color;
+            border-color: $card-bg-color;
+            color: $text-color-main;
+
+            &:hover{
+               background-color: darken($card-bg-color, 10);
+            }
+         }
+      }
+      .dropdown-menu{
+         padding: 0;
+         min-width: 200px;
+
+         a.dropdown-item{
+            padding: 0.6rem 1rem;
+            font-size: 14px;
+            border-bottom: 1px solid #999;
+         }
+      }
    }
    footer {
       padding-left: 10px;
@@ -42,6 +76,7 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
    .card-list {
       list-style: none;
       margin: 0;
+      padding-top: 5px;
       max-height: calc(#{$column-height} - #{$column-header-height} - #{$column-footer-height});
       overflow-y: auto;
       &::-webkit-scrollbar {
