--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
    font-family: "Source Sans Pro", sans-serif;
    line-height: 1.3em;
    font-size: 14px;
+   box-sizing: border-box;
 }
 .App {
    height: 100vh;
@@ -23,6 +24,20 @@
    padding: 0;
 }
 .btn:focus, btn:active{
-   outline: none;
-   box-shadow: none;
+   outline: none !important;
+   box-shadow: none !important;
+}
+
+.titleTrelloEditable{
+   background-color: inherit;
+   border: none;
+   font-size: inherit;
+   font-weight: inherit;
+   cursor: pointer;
+
+   &:focus{
+      background-color: white;
+      border: 1px solid $border-color;
+   }
+
 }
