--- a/src/components/Appbar/appbar.scss
+++ b/src/components/Appbar/appbar.scss
@@ -2,9 +2,93 @@
 
 .navbar-app {
    height: $navbar-app-height;
+   @include grassColor;
+   background-color: darken($color: #292929b0, $amount: 5);
    padding-left: $gap;
+   border: none;
    display: flex;
    align-items: center;
-   background-color: $appbar-bg-color;
    font-size: 1.5rem;
+
+   .navbar-container{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      max-width: 2048px;
+      width: 100%;
+      height: 100%;
+
+      .navbar-left,
+      .navbar-right{
+         display: inline-flex;
+
+         .item{
+            @include grassColor;
+            font-size: 18px;
+            padding: 5px 12px;
+            margin: 4px;
+            border-radius: $card-border-radius;
+            color: $text-color-light;
+            cursor: pointer;
+
+            &:hover{
+               background-color: darken($color: #dadada73, $amount: 5);
+            }
+         }
+      }
+      .navbar-center{
+         @include grassColor;
+         width: 200px;
+         padding: 4px;
+         font-size: 18px;
+         color: $text-color-light;
+         text-align: center;
+         border-radius: $card-border-radius;
+         span{
+            font-size: 18px;
+            padding-left: 8px;
+         }
+      }
+      .navbar-right{
+
+         .search-container{
+            @include grassColor;
+            border-radius: $card-border-radius;
+            font-size: 18px;
+            padding: 1px;
+            margin-top: 4px;
+            height: 60%;
+            .icon{
+               padding: 8px 16px;
+               color: $text-color-light;
+               cursor: pointer;
+            }
+            .searchInput{
+               color: $text-color-light;
+               background-color: #dadada00;
+               border: none;
+               height: 70%;
+
+               &::placeholder{
+                  color: $text-color-light;
+                  padding-left: 8px;
+               }
+               &:focus{
+                  border: none;
+                  outline: none;
+               }
+            }
+         }
+
+         .avatar{
+            padding: 4px;
+            margin-right: 8px;
+            img{
+               width: 35px;
+               height: 35px;
+               border-radius: 50%;
+            }
+         }
+      }
+   }
 }
