--- a/src/components/BoardContent/boardcontent.scss
+++ b/src/components/BoardContent/boardcontent.scss
@@ -23,8 +23,7 @@
    }
    
    .addNew-column{
-
-      max-width: 255px;
+      width: 255px;
       font-size: 15px;
       line-height: 32px;
       color: white;
