--- a/src/_variable.scss
+++ b/src/_variable.scss
@@ -34,3 +34,8 @@ $scream-phone: 480px;
    border-right: 1px solid rgba(255, 255, 255, 0.2);
    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
+@mixin flexCenter{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
